# advent-of-code-2021

./: CMakeLists.txt  README.md  solution_test.cc
dev/: folder-gen.bat
src/: main.cpp
src/day1/: solution.cpp
src/day1-part1/: main.cpp  solution.cpp  solution.hh
src/day1-part2/: main.cpp  solution.cpp  solution.hh
src/day2-part1/: main.cpp  solution.cpp  solution.hh
src/day2-part2/: main.cpp  solution.cpp  solution.hh
src/day3-part1/: main.cpp  solution.cpp  solution.hh
src/day3-part2/: solution.cpp  solution.hh
src/utils/: file-utils.cpp  file-utils.hh  vector-utils.cpp  vector-utils.hh
tests/: CMakeLists.txt  day1-part1-test.cc  day1-part1-test.cpp  day1-part2-test.cc  day1-part2-test.cpp  day2-part1-test.cc  day2-part1-test.cpp  day2-part2-test.cc  day2-part2-test.cpp  day3-part1-test.cc  day3-part1-test.cpp  day3-part2-test.cpp
